--- a/SASS/contents/_snowback.sass
+++ b/SASS/contents/_snowback.sass
@@ -189,17 +189,3 @@ div.snow_background
     ////////////////////////////////////// MEDIA QUERIES //////////////////////////////////////
 
 
-@media (max-width: 670px )
-    .customers_image
-        width: 400px
-        height: 600px
-    .customers_image_adjust
-        height: 400px
-    
-    .customers_card   
-        
-        
-        width: 430px
-        padding-top: 15px
-    .center_row_customer
-        margin-left: 5px
